# pandoc-reader

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  __init__.py  pandoc_reader.py  pelicanconf_example.py  pyproject.toml  tasks.py
.github/workflows/: main.yml
pelican/plugins/pandoc_reader/: __init__.py  pandoc_reader.py  test_cases_with_invalid_args.py  test_cases_with_invalid_default_files.py  test_cases_with_valid_arg_citations.py  test_cases_with_valid_args.py  test_cases_with_valid_default_files.py  test_invalid_metadata.py  test_pandoc_availability.py  test_specific_outputs.py
pelican/plugins/pandoc_reader/templates/: pandoc-reader-default.html  toc-template.html
pelican/plugins/pandoc_reader/test/: test_global_bibliography.py  test_invalid_args.py  test_invalid_defaults_files.py  test_invalid_metadata.py  test_invalid_multiple_defaults_files.py  test_pandoc_availability.py  test_specific_outputs.py  test_valid_arg_citations.py  test_valid_args.py  test_valid_defaults_files.py  test_valid_multiple_default_files.py
pelican/plugins/pandoc_reader/test/defaults_files/: from_reader_both_given.yaml  invalid_from_input_format.yaml  invalid_reader_input_format.yaml  invalid_to_output_format.yaml  invalid_writer_output_format.yaml  no_input_format.yaml  no_output_format.yaml  self_contained_true.yaml  standalone_true.yaml  to_writer_both_given.yaml  valid_defaults.yaml  valid_defaults_file_1.yaml  valid_defaults_file_2.yaml  valid_defaults_with_citeproc_filter.yaml  valid_defaults_with_toc.yaml  valid_defaults_with_toc_and_citations.yaml  (+7 more)
pelican/plugins/pandoc_reader/test_content/: metadata_start_with_leading_spaces.md  valid_content_with_citation.md
pelican/plugins/pandoc_reader/test_default_files/: from_reader_both_given.yaml  invalid_from_input_format.yaml  invalid_reader_input_format.yaml  invalid_to_output_format.yaml  invalid_writer_output_format.yaml  no_input_format.yaml  no_output_format.yaml  selfcontained_true.yaml  standalone_true.yaml  to_writer_both_given.yaml  valid_defaults.yaml  valid_defaults_with_citeproc_filter.yaml  valid_defaults_with_toc.yaml  valid_defaults_with_toc_and_citations.yaml
(+21 files in other folders)
