[tool.poetry]
name = "pelican-pandoc-reader"
version = "2.1.0"
description = "Pelican plugin for converting Pandoc's Markdown variant to HTML."
authors = ["Nandakumar Chandrasekhar <navanitachora@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin", "markdown", "pandoc"]
repository = "https://github.com/pelican-plugins/pandoc-reader"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/pandoc-reader/issues"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pelican = ">=4.5"
markdown = {version = "<=3.3.4", optional = true}
pyyaml = "^6.0.0"
beautifulsoup4 = "^4.9.3"
"ruamel.yaml" = "^0.17.32"

[tool.poetry.dev-dependencies]
black = "^23"
flake8 = "^4.0.1"
flake8-black = "^0.2.0"
invoke = "^2.0"
isort = "^5.12.0"
livereload = "^2.6"
markdown = "<=3.3.4"
pytest = "^6.0"
pytest-cov = "^2.8"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.4"
Werkzeug = "^1.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Pandoc Reader"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
append-github-contributor = true

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" and "pandoc_reader" as separate import sections
known_pelican = "pelican"
known_pandoc = "pandoc_reader"

sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,PANDOC,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
